tobias/sintaxe.output
State 87 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: PROGRAM IDENT ';' corpo '.'

    2 corpo: dc _BEGIN comandos END

    3 dc: dc_c dc_v dc_p

    4 dc_c: CONST IDENT '=' numero ';' dc_c
    5     | %empty

    6 dc_v: VAR variaveis ':' tipo_var ';' dc_v
    7     | %empty

    8 tipo_var: REAL
    9         | INTEGER

   10 variaveis: IDENT mais_var

   11 mais_var: ',' variaveis
   12         | %empty

   13 dc_p: PROCEDURE IDENT parametros ';' corpo_p dc_p
   14     | %empty

   15 parametros: '(' lista_par ')'
   16           | %empty

   17 lista_par: variaveis ':' tipo_var mais_par

   18 mais_par: ';' lista_par
   19         | %empty

   20 corpo_p: dc_loc _BEGIN comandos END ';'

   21 dc_loc: dc_v

   22 lista_arg: '(' argumentos ')'
   23          | %empty

   24 argumentos: IDENT mais_ident

   25 mais_ident: ';' argumentos
   26           | %empty

   27 pfalsa: ELSE cmd
   28       | %empty

   29 comandos: cmd ';' comandos
   30         | %empty

   31 cmd: READ '(' variaveis ')'
   32    | WRITE '(' variaveis ')'
   33    | WHILE '(' condicao ')' DO cmd
   34    | IF condicao THEN cmd pfalsa
   35    | IDENT ':' '=' expressao
   36    | IDENT lista_arg
   37    | _BEGIN comandos END
   38    | FOR IDENT TO numero DO cmd

   39 condicao: expressao relacao expressao

   40 relacao: '='
   41        | '<' '>'
   42        | '>' '='
   43        | '<' '='
   44        | '>'
   45        | '<'

   46 expressao: termo outros_termos

   47 op_un: '+'
   48      | '-'
   49      | %empty

   50 outros_termos: op_ad termo outros_termos
   51              | %empty

   52 op_ad: '+'
   53      | '-'

   54 termo: op_un fator mais_fatores

   55 mais_fatores: op_mul fator mais_fatores
   56             | %empty

   57 op_mul: '*'
   58       | '/'

   59 fator: IDENT
   60      | numero
   61      | '(' expressao ')'

   62 numero: NUMERO_INT
   63       | NUMERO_REAL


Terminals, with rules where they appear

$end (0) 0
'(' (40) 15 22 31 32 33 61
')' (41) 15 22 31 32 33 61
'*' (42) 57
'+' (43) 47 52
',' (44) 11
'-' (45) 48 53
'.' (46) 1
'/' (47) 58
':' (58) 6 17 35
';' (59) 1 4 6 13 18 20 25 29
'<' (60) 41 43 45
'=' (61) 4 35 40 42 43
'>' (62) 41 42 44
error (256)
_BEGIN (258) 2 20 37
CONST (259) 4
DO (260) 33 38
ELSE (261) 27
END (262) 2 20 37
FOR (263) 38
IDENT (264) 1 4 10 13 24 35 36 38 59
IF (265) 34
INTEGER (266) 9
NUMERO_INT (267) 62
NUMERO_REAL (268) 63
PROCEDURE (269) 13
PROGRAM (270) 1
READ (271) 31
REAL (272) 8
THEN (273) 34
TO (274) 38
VAR (275) 6
WHILE (276) 33
WRITE (277) 32


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
programa (37)
    on left: 1, on right: 0
corpo (38)
    on left: 2, on right: 1
dc (39)
    on left: 3, on right: 2
dc_c (40)
    on left: 4 5, on right: 3 4
dc_v (41)
    on left: 6 7, on right: 3 6 21
tipo_var (42)
    on left: 8 9, on right: 6 17
variaveis (43)
    on left: 10, on right: 6 11 17 31 32
mais_var (44)
    on left: 11 12, on right: 10
dc_p (45)
    on left: 13 14, on right: 3 13
parametros (46)
    on left: 15 16, on right: 13
lista_par (47)
    on left: 17, on right: 15 18
mais_par (48)
    on left: 18 19, on right: 17
corpo_p (49)
    on left: 20, on right: 13
dc_loc (50)
    on left: 21, on right: 20
lista_arg (51)
    on left: 22 23, on right: 36
argumentos (52)
    on left: 24, on right: 22 25
mais_ident (53)
    on left: 25 26, on right: 24
pfalsa (54)
    on left: 27 28, on right: 34
comandos (55)
    on left: 29 30, on right: 2 20 29 37
cmd (56)
    on left: 31 32 33 34 35 36 37 38, on right: 27 29 33 34 38
condicao (57)
    on left: 39, on right: 33 34
relacao (58)
    on left: 40 41 42 43 44 45, on right: 39
expressao (59)
    on left: 46, on right: 35 39 61
op_un (60)
    on left: 47 48 49, on right: 54
outros_termos (61)
    on left: 50 51, on right: 46 50
op_ad (62)
    on left: 52 53, on right: 50
termo (63)
    on left: 54, on right: 46 50
mais_fatores (64)
    on left: 55 56, on right: 54 55
op_mul (65)
    on left: 57 58, on right: 55
fator (66)
    on left: 59 60 61, on right: 54 55
numero (67)
    on left: 62 63, on right: 4 38 60


State 0

    0 $accept: . programa $end

    PROGRAM  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: PROGRAM . IDENT ';' corpo '.'

    IDENT  shift, and go to state 3


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 4


State 3

    1 programa: PROGRAM IDENT . ';' corpo '.'

    ';'  shift, and go to state 5


State 4

    0 $accept: programa $end .

    $default  accept


State 5

    1 programa: PROGRAM IDENT ';' . corpo '.'

    CONST  shift, and go to state 6

    $default  reduce using rule 5 (dc_c)

    corpo  go to state 7
    dc     go to state 8
    dc_c   go to state 9


State 6

    4 dc_c: CONST . IDENT '=' numero ';' dc_c

    IDENT  shift, and go to state 10


State 7

    1 programa: PROGRAM IDENT ';' corpo . '.'

    '.'  shift, and go to state 11


State 8

    2 corpo: dc . _BEGIN comandos END

    _BEGIN  shift, and go to state 12


State 9

    3 dc: dc_c . dc_v dc_p

    VAR  shift, and go to state 13

    $default  reduce using rule 7 (dc_v)

    dc_v  go to state 14


State 10

    4 dc_c: CONST IDENT . '=' numero ';' dc_c

    '='  shift, and go to state 15


State 11

    1 programa: PROGRAM IDENT ';' corpo '.' .

    $default  reduce using rule 1 (programa)


State 12

    2 corpo: dc _BEGIN . comandos END

    _BEGIN  shift, and go to state 16
    FOR     shift, and go to state 17
    IDENT   shift, and go to state 18
    IF      shift, and go to state 19
    READ    shift, and go to state 20
    WHILE   shift, and go to state 21
    WRITE   shift, and go to state 22

    $default  reduce using rule 30 (comandos)

    comandos  go to state 23
    cmd       go to state 24


State 13

    6 dc_v: VAR . variaveis ':' tipo_var ';' dc_v

    IDENT  shift, and go to state 25

    variaveis  go to state 26


State 14

    3 dc: dc_c dc_v . dc_p

    PROCEDURE  shift, and go to state 27

    $default  reduce using rule 14 (dc_p)

    dc_p  go to state 28


State 15

    4 dc_c: CONST IDENT '=' . numero ';' dc_c

    NUMERO_INT   shift, and go to state 29
    NUMERO_REAL  shift, and go to state 30

    numero  go to state 31


State 16

   37 cmd: _BEGIN . comandos END

    _BEGIN  shift, and go to state 16
    FOR     shift, and go to state 17
    IDENT   shift, and go to state 18
    IF      shift, and go to state 19
    READ    shift, and go to state 20
    WHILE   shift, and go to state 21
    WRITE   shift, and go to state 22

    $default  reduce using rule 30 (comandos)

    comandos  go to state 32
    cmd       go to state 24


State 17

   38 cmd: FOR . IDENT TO numero DO cmd

    IDENT  shift, and go to state 33


State 18

   35 cmd: IDENT . ':' '=' expressao
   36    | IDENT . lista_arg

    ':'  shift, and go to state 34
    '('  shift, and go to state 35

    $default  reduce using rule 23 (lista_arg)

    lista_arg  go to state 36


State 19

   34 cmd: IF . condicao THEN cmd pfalsa

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38

    $default  reduce using rule 49 (op_un)

    condicao   go to state 39
    expressao  go to state 40
    op_un      go to state 41
    termo      go to state 42


State 20

   31 cmd: READ . '(' variaveis ')'

    '('  shift, and go to state 43


State 21

   33 cmd: WHILE . '(' condicao ')' DO cmd

    '('  shift, and go to state 44


State 22

   32 cmd: WRITE . '(' variaveis ')'

    '('  shift, and go to state 45


State 23

    2 corpo: dc _BEGIN comandos . END

    END  shift, and go to state 46


State 24

   29 comandos: cmd . ';' comandos

    ';'  shift, and go to state 47


State 25

   10 variaveis: IDENT . mais_var

    ','  shift, and go to state 48

    $default  reduce using rule 12 (mais_var)

    mais_var  go to state 49


State 26

    6 dc_v: VAR variaveis . ':' tipo_var ';' dc_v

    ':'  shift, and go to state 50


State 27

   13 dc_p: PROCEDURE . IDENT parametros ';' corpo_p dc_p

    IDENT  shift, and go to state 51


State 28

    3 dc: dc_c dc_v dc_p .

    $default  reduce using rule 3 (dc)


State 29

   62 numero: NUMERO_INT .

    $default  reduce using rule 62 (numero)


State 30

   63 numero: NUMERO_REAL .

    $default  reduce using rule 63 (numero)


State 31

    4 dc_c: CONST IDENT '=' numero . ';' dc_c

    ';'  shift, and go to state 52


State 32

   37 cmd: _BEGIN comandos . END

    END  shift, and go to state 53


State 33

   38 cmd: FOR IDENT . TO numero DO cmd

    TO  shift, and go to state 54


State 34

   35 cmd: IDENT ':' . '=' expressao

    '='  shift, and go to state 55


State 35

   22 lista_arg: '(' . argumentos ')'

    IDENT  shift, and go to state 56

    argumentos  go to state 57


State 36

   36 cmd: IDENT lista_arg .

    $default  reduce using rule 36 (cmd)


State 37

   47 op_un: '+' .

    $default  reduce using rule 47 (op_un)


State 38

   48 op_un: '-' .

    $default  reduce using rule 48 (op_un)


State 39

   34 cmd: IF condicao . THEN cmd pfalsa

    THEN  shift, and go to state 58


State 40

   39 condicao: expressao . relacao expressao

    '='  shift, and go to state 59
    '<'  shift, and go to state 60
    '>'  shift, and go to state 61

    relacao  go to state 62


State 41

   54 termo: op_un . fator mais_fatores

    IDENT        shift, and go to state 63
    NUMERO_INT   shift, and go to state 29
    NUMERO_REAL  shift, and go to state 30
    '('          shift, and go to state 64

    fator   go to state 65
    numero  go to state 66


State 42

   46 expressao: termo . outros_termos

    '+'  shift, and go to state 67
    '-'  shift, and go to state 68

    $default  reduce using rule 51 (outros_termos)

    outros_termos  go to state 69
    op_ad          go to state 70


State 43

   31 cmd: READ '(' . variaveis ')'

    IDENT  shift, and go to state 25

    variaveis  go to state 71


State 44

   33 cmd: WHILE '(' . condicao ')' DO cmd

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38

    $default  reduce using rule 49 (op_un)

    condicao   go to state 72
    expressao  go to state 40
    op_un      go to state 41
    termo      go to state 42


State 45

   32 cmd: WRITE '(' . variaveis ')'

    IDENT  shift, and go to state 25

    variaveis  go to state 73


State 46

    2 corpo: dc _BEGIN comandos END .

    $default  reduce using rule 2 (corpo)


State 47

   29 comandos: cmd ';' . comandos

    _BEGIN  shift, and go to state 16
    FOR     shift, and go to state 17
    IDENT   shift, and go to state 18
    IF      shift, and go to state 19
    READ    shift, and go to state 20
    WHILE   shift, and go to state 21
    WRITE   shift, and go to state 22

    $default  reduce using rule 30 (comandos)

    comandos  go to state 74
    cmd       go to state 24


State 48

   11 mais_var: ',' . variaveis

    IDENT  shift, and go to state 25

    variaveis  go to state 75


State 49

   10 variaveis: IDENT mais_var .

    $default  reduce using rule 10 (variaveis)


State 50

    6 dc_v: VAR variaveis ':' . tipo_var ';' dc_v

    INTEGER  shift, and go to state 76
    REAL     shift, and go to state 77

    tipo_var  go to state 78


State 51

   13 dc_p: PROCEDURE IDENT . parametros ';' corpo_p dc_p

    '('  shift, and go to state 79

    $default  reduce using rule 16 (parametros)

    parametros  go to state 80


State 52

    4 dc_c: CONST IDENT '=' numero ';' . dc_c

    CONST  shift, and go to state 6

    $default  reduce using rule 5 (dc_c)

    dc_c  go to state 81


State 53

   37 cmd: _BEGIN comandos END .

    $default  reduce using rule 37 (cmd)


State 54

   38 cmd: FOR IDENT TO . numero DO cmd

    NUMERO_INT   shift, and go to state 29
    NUMERO_REAL  shift, and go to state 30

    numero  go to state 82


State 55

   35 cmd: IDENT ':' '=' . expressao

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38

    $default  reduce using rule 49 (op_un)

    expressao  go to state 83
    op_un      go to state 41
    termo      go to state 42


State 56

   24 argumentos: IDENT . mais_ident

    ';'  shift, and go to state 84

    $default  reduce using rule 26 (mais_ident)

    mais_ident  go to state 85


State 57

   22 lista_arg: '(' argumentos . ')'

    ')'  shift, and go to state 86


State 58

   34 cmd: IF condicao THEN . cmd pfalsa

    _BEGIN  shift, and go to state 16
    FOR     shift, and go to state 17
    IDENT   shift, and go to state 18
    IF      shift, and go to state 19
    READ    shift, and go to state 20
    WHILE   shift, and go to state 21
    WRITE   shift, and go to state 22

    cmd  go to state 87


State 59

   40 relacao: '=' .

    $default  reduce using rule 40 (relacao)


State 60

   41 relacao: '<' . '>'
   43        | '<' . '='
   45        | '<' .

    '='  shift, and go to state 88
    '>'  shift, and go to state 89

    $default  reduce using rule 45 (relacao)


State 61

   42 relacao: '>' . '='
   44        | '>' .

    '='  shift, and go to state 90

    $default  reduce using rule 44 (relacao)


State 62

   39 condicao: expressao relacao . expressao

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38

    $default  reduce using rule 49 (op_un)

    expressao  go to state 91
    op_un      go to state 41
    termo      go to state 42


State 63

   59 fator: IDENT .

    $default  reduce using rule 59 (fator)


State 64

   61 fator: '(' . expressao ')'

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38

    $default  reduce using rule 49 (op_un)

    expressao  go to state 92
    op_un      go to state 41
    termo      go to state 42


State 65

   54 termo: op_un fator . mais_fatores

    '*'  shift, and go to state 93
    '/'  shift, and go to state 94

    $default  reduce using rule 56 (mais_fatores)

    mais_fatores  go to state 95
    op_mul        go to state 96


State 66

   60 fator: numero .

    $default  reduce using rule 60 (fator)


State 67

   52 op_ad: '+' .

    $default  reduce using rule 52 (op_ad)


State 68

   53 op_ad: '-' .

    $default  reduce using rule 53 (op_ad)


State 69

   46 expressao: termo outros_termos .

    $default  reduce using rule 46 (expressao)


State 70

   50 outros_termos: op_ad . termo outros_termos

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38

    $default  reduce using rule 49 (op_un)

    op_un  go to state 41
    termo  go to state 97


State 71

   31 cmd: READ '(' variaveis . ')'

    ')'  shift, and go to state 98


State 72

   33 cmd: WHILE '(' condicao . ')' DO cmd

    ')'  shift, and go to state 99


State 73

   32 cmd: WRITE '(' variaveis . ')'

    ')'  shift, and go to state 100


State 74

   29 comandos: cmd ';' comandos .

    $default  reduce using rule 29 (comandos)


State 75

   11 mais_var: ',' variaveis .

    $default  reduce using rule 11 (mais_var)


State 76

    9 tipo_var: INTEGER .

    $default  reduce using rule 9 (tipo_var)


State 77

    8 tipo_var: REAL .

    $default  reduce using rule 8 (tipo_var)


State 78

    6 dc_v: VAR variaveis ':' tipo_var . ';' dc_v

    ';'  shift, and go to state 101


State 79

   15 parametros: '(' . lista_par ')'

    IDENT  shift, and go to state 25

    variaveis  go to state 102
    lista_par  go to state 103


State 80

   13 dc_p: PROCEDURE IDENT parametros . ';' corpo_p dc_p

    ';'  shift, and go to state 104


State 81

    4 dc_c: CONST IDENT '=' numero ';' dc_c .

    $default  reduce using rule 4 (dc_c)


State 82

   38 cmd: FOR IDENT TO numero . DO cmd

    DO  shift, and go to state 105


State 83

   35 cmd: IDENT ':' '=' expressao .

    $default  reduce using rule 35 (cmd)


State 84

   25 mais_ident: ';' . argumentos

    IDENT  shift, and go to state 56

    argumentos  go to state 106


State 85

   24 argumentos: IDENT mais_ident .

    $default  reduce using rule 24 (argumentos)


State 86

   22 lista_arg: '(' argumentos ')' .

    $default  reduce using rule 22 (lista_arg)


State 87

   34 cmd: IF condicao THEN cmd . pfalsa

    ELSE  shift, and go to state 107

    ELSE      [reduce using rule 28 (pfalsa)]
    $default  reduce using rule 28 (pfalsa)

    pfalsa  go to state 108


State 88

   43 relacao: '<' '=' .

    $default  reduce using rule 43 (relacao)


State 89

   41 relacao: '<' '>' .

    $default  reduce using rule 41 (relacao)


State 90

   42 relacao: '>' '=' .

    $default  reduce using rule 42 (relacao)


State 91

   39 condicao: expressao relacao expressao .

    $default  reduce using rule 39 (condicao)


State 92

   61 fator: '(' expressao . ')'

    ')'  shift, and go to state 109


State 93

   57 op_mul: '*' .

    $default  reduce using rule 57 (op_mul)


State 94

   58 op_mul: '/' .

    $default  reduce using rule 58 (op_mul)


State 95

   54 termo: op_un fator mais_fatores .

    $default  reduce using rule 54 (termo)


State 96

   55 mais_fatores: op_mul . fator mais_fatores

    IDENT        shift, and go to state 63
    NUMERO_INT   shift, and go to state 29
    NUMERO_REAL  shift, and go to state 30
    '('          shift, and go to state 64

    fator   go to state 110
    numero  go to state 66


State 97

   50 outros_termos: op_ad termo . outros_termos

    '+'  shift, and go to state 67
    '-'  shift, and go to state 68

    $default  reduce using rule 51 (outros_termos)

    outros_termos  go to state 111
    op_ad          go to state 70


State 98

   31 cmd: READ '(' variaveis ')' .

    $default  reduce using rule 31 (cmd)


State 99

   33 cmd: WHILE '(' condicao ')' . DO cmd

    DO  shift, and go to state 112


State 100

   32 cmd: WRITE '(' variaveis ')' .

    $default  reduce using rule 32 (cmd)


State 101

    6 dc_v: VAR variaveis ':' tipo_var ';' . dc_v

    VAR  shift, and go to state 13

    $default  reduce using rule 7 (dc_v)

    dc_v  go to state 113


State 102

   17 lista_par: variaveis . ':' tipo_var mais_par

    ':'  shift, and go to state 114


State 103

   15 parametros: '(' lista_par . ')'

    ')'  shift, and go to state 115


State 104

   13 dc_p: PROCEDURE IDENT parametros ';' . corpo_p dc_p

    VAR  shift, and go to state 13

    $default  reduce using rule 7 (dc_v)

    dc_v     go to state 116
    corpo_p  go to state 117
    dc_loc   go to state 118


State 105

   38 cmd: FOR IDENT TO numero DO . cmd

    _BEGIN  shift, and go to state 16
    FOR     shift, and go to state 17
    IDENT   shift, and go to state 18
    IF      shift, and go to state 19
    READ    shift, and go to state 20
    WHILE   shift, and go to state 21
    WRITE   shift, and go to state 22

    cmd  go to state 119


State 106

   25 mais_ident: ';' argumentos .

    $default  reduce using rule 25 (mais_ident)


State 107

   27 pfalsa: ELSE . cmd

    _BEGIN  shift, and go to state 16
    FOR     shift, and go to state 17
    IDENT   shift, and go to state 18
    IF      shift, and go to state 19
    READ    shift, and go to state 20
    WHILE   shift, and go to state 21
    WRITE   shift, and go to state 22

    cmd  go to state 120


State 108

   34 cmd: IF condicao THEN cmd pfalsa .

    $default  reduce using rule 34 (cmd)


State 109

   61 fator: '(' expressao ')' .

    $default  reduce using rule 61 (fator)


State 110

   55 mais_fatores: op_mul fator . mais_fatores

    '*'  shift, and go to state 93
    '/'  shift, and go to state 94

    $default  reduce using rule 56 (mais_fatores)

    mais_fatores  go to state 121
    op_mul        go to state 96


State 111

   50 outros_termos: op_ad termo outros_termos .

    $default  reduce using rule 50 (outros_termos)


State 112

   33 cmd: WHILE '(' condicao ')' DO . cmd

    _BEGIN  shift, and go to state 16
    FOR     shift, and go to state 17
    IDENT   shift, and go to state 18
    IF      shift, and go to state 19
    READ    shift, and go to state 20
    WHILE   shift, and go to state 21
    WRITE   shift, and go to state 22

    cmd  go to state 122


State 113

    6 dc_v: VAR variaveis ':' tipo_var ';' dc_v .

    $default  reduce using rule 6 (dc_v)


State 114

   17 lista_par: variaveis ':' . tipo_var mais_par

    INTEGER  shift, and go to state 76
    REAL     shift, and go to state 77

    tipo_var  go to state 123


State 115

   15 parametros: '(' lista_par ')' .

    $default  reduce using rule 15 (parametros)


State 116

   21 dc_loc: dc_v .

    $default  reduce using rule 21 (dc_loc)


State 117

   13 dc_p: PROCEDURE IDENT parametros ';' corpo_p . dc_p

    PROCEDURE  shift, and go to state 27

    $default  reduce using rule 14 (dc_p)

    dc_p  go to state 124


State 118

   20 corpo_p: dc_loc . _BEGIN comandos END ';'

    _BEGIN  shift, and go to state 125


State 119

   38 cmd: FOR IDENT TO numero DO cmd .

    $default  reduce using rule 38 (cmd)


State 120

   27 pfalsa: ELSE cmd .

    $default  reduce using rule 27 (pfalsa)


State 121

   55 mais_fatores: op_mul fator mais_fatores .

    $default  reduce using rule 55 (mais_fatores)


State 122

   33 cmd: WHILE '(' condicao ')' DO cmd .

    $default  reduce using rule 33 (cmd)


State 123

   17 lista_par: variaveis ':' tipo_var . mais_par

    ';'  shift, and go to state 126

    $default  reduce using rule 19 (mais_par)

    mais_par  go to state 127


State 124

   13 dc_p: PROCEDURE IDENT parametros ';' corpo_p dc_p .

    $default  reduce using rule 13 (dc_p)


State 125

   20 corpo_p: dc_loc _BEGIN . comandos END ';'

    _BEGIN  shift, and go to state 16
    FOR     shift, and go to state 17
    IDENT   shift, and go to state 18
    IF      shift, and go to state 19
    READ    shift, and go to state 20
    WHILE   shift, and go to state 21
    WRITE   shift, and go to state 22

    $default  reduce using rule 30 (comandos)

    comandos  go to state 128
    cmd       go to state 24


State 126

   18 mais_par: ';' . lista_par

    IDENT  shift, and go to state 25

    variaveis  go to state 102
    lista_par  go to state 129


State 127

   17 lista_par: variaveis ':' tipo_var mais_par .

    $default  reduce using rule 17 (lista_par)


State 128

   20 corpo_p: dc_loc _BEGIN comandos . END ';'

    END  shift, and go to state 130


State 129

   18 mais_par: ';' lista_par .

    $default  reduce using rule 18 (mais_par)


State 130

   20 corpo_p: dc_loc _BEGIN comandos END . ';'

    ';'  shift, and go to state 131


State 131

   20 corpo_p: dc_loc _BEGIN comandos END ';' .

    $default  reduce using rule 20 (corpo_p)
